fix heroku background image not showing

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -41,7 +41,7 @@ a:hover {
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: cover;
-	background-color: #333638;
+	background-color: #6C757D;
 }
 .background {
 	min-height: 100vh;
